# passport-service/swagger/contact-service-swagger.json
@@ -58,7 +58,7 @@
           "name" : "body",
           "required" : false,
           "schema" : {
-            "$ref" : "#/definitions/Contact"
+            "$ref" : "#/definitions/ContactDetails"
           }
         } ],
         "responses" : {
@@ -114,11 +114,11 @@
           }
         }
       },
-      "delete" : {
+      "put" : {
         "tags" : [ "contact" ],
-        "summary" : "delete contact",
-        "description" : "Delete a contact",
-        "operationId" : "deleteContact",
+        "summary" : "add contact",
+        "description" : "Update a contact and return it",
+        "operationId" : "updateContact",
         "consumes" : [ "application/json" ],
         "produces" : [ "application/json" ],
         "parameters" : [ {
@@ -127,13 +127,54 @@
           "required" : true,
           "type" : "string"
         }, {
+          "name" : "contactId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
+        }, {
           "in" : "body",
           "name" : "body",
           "required" : false,
           "schema" : {
-            "type" : "integer",
-            "format" : "int64"
+            "$ref" : "#/definitions/ContactDetails"
           }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Ok",
+            "schema" : {
+              "$ref" : "#/definitions/Contact"
+            }
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "404" : {
+            "description" : "Not Found"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "contact" ],
+        "summary" : "delete contact",
+        "description" : "Delete a contact",
+        "operationId" : "deleteContact",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "type" : "string"
+        }, {
+          "name" : "contactId",
+          "in" : "path",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int64"
         } ],
         "responses" : {
           "201" : {
@@ -156,19 +197,6 @@
     "Contact" : {
       "type" : "object",
       "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64",
-          "description" : "Contact id"
-        },
-        "userId" : {
-          "type" : "string",
-          "description" : "Used id"
-        },
-        "relationship" : {
-          "type" : "string",
-          "description" : "Relationship"
-        },
         "firstName" : {
           "type" : "string",
           "description" : "First name"
@@ -179,7 +207,44 @@
         },
         "email" : {
           "type" : "string",
-          "description" : "Email"
+          "description" : "Email",
+          "pattern" : ".+@.+\\..+"
+        },
+        "relationship" : {
+          "type" : "string",
+          "description" : "Relationship"
+        },
+        "id" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "Contact id"
+        },
+        "userId" : {
+          "type" : "string",
+          "description" : "Used id"
+        }
+      },
+      "description" : "User Contacts"
+    },
+    "ContactDetails" : {
+      "type" : "object",
+      "properties" : {
+        "firstName" : {
+          "type" : "string",
+          "description" : "First name"
+        },
+        "lastName" : {
+          "type" : "string",
+          "description" : "Last name"
+        },
+        "email" : {
+          "type" : "string",
+          "description" : "Email",
+          "pattern" : ".+@.+\\..+"
+        },
+        "relationship" : {
+          "type" : "string",
+          "description" : "Relationship"
         }
       },
       "description" : "User Contacts"
